<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.FragmentAdminOptions">

    <Button
        android:id="@+id/btnViewStock"
        android:text="@string/view_stock"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        android:paddingHorizontal="@dimen/_19sdp"
        android:background="@drawable/layout_background_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnViewOrders"
        android:text="@string/view_orders"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_15sdp"
        android:background="@drawable/layout_background_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/admin_login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_39sdp"
        android:background="@drawable/layout_background_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogout"
        android:text="@string/admin_logout"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_33sdp"
        android:background="@drawable/layout_background_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>