<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Fragments.FragmentAdminLogin">

    <TextView
        android:text="@string/admin_login_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_20sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:id="@+id/etEmail"
        android:textSize="@dimen/_15sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_5sdp"
        android:lines="1"
        android:hint="@string/enter_email"
        android:background="@drawable/layout_background_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/etPassword"
        android:textSize="@dimen/_15sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_5sdp"
        android:lines="1"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:background="@drawable/layout_background_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:background="@drawable/layout_background_button"
        android:text="@string/admin_login"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_height="wrap_content" />

</LinearLayout>