<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    tools:context=".Fragments.FragmentOrderDetails">

    <LinearLayout
        android:paddingHorizontal="@dimen/_5sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvOrderId"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:background="@android:color/black"
                android:layout_width="0.3dp"
                android:layout_height="@dimen/_17sdp"/>

            <TextView
                android:id="@+id/tvOrderDateTime"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/details"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/layout_yellow_background"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingLeft="@dimen/_5sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:background="@color/color_yellow"
                android:textColor="@android:color/black"
                android:text="@string/order_details"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/order_number"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/order_date_time"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/order_status"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/grand_total"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/pay_info"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvOrderNumber"
                        android:text="@string/order_number"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvOrderDateTimeDetails"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/order_date_time"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvOrderStatus"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/order_status"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvGrandTotal"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/grand_total"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvPaymentInformation"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/pay_info"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/layout_background_grey_dark"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingLeft="@dimen/_5sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:text="@string/cus_info"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/cus_name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/email"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/country"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/city"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/phone_number"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvCustomerName"
                        android:text="@string/order_number"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvCustomerEmail"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/order_date_time"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvCountry"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/order_status"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvCity"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/grand_total"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvPhoneNumber"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/pay_info"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/layout_background_grey_dark"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingLeft="@dimen/_5sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:text="@string/shopping_cart"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center_horizontal"
            android:background="@color/color_light_grey"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/sub_total"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/shipping"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/grand_total"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/total_paid"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/total_due"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="@dimen/_20sdp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvSubTotal"
                    android:text="@string/sub_total"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvShipping"
                    android:text="@string/shipping_value"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvGrand"
                    android:text="@string/grand_total"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvTotalPaid"
                    android:text="@string/total_paid_value"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvTotalDue"
                    android:text="@string/total_due"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>